update project repository for codingame

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "fzaninotto/faker": "^1.9",
         "hautelook/alice-bundle": "^2.7",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.4.*",
