--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,3 +27,6 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/profile, roles: ROLE_USER }
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
