update project repository for codingame

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,6 +23,10 @@ security:
             logout:
                 path: logout
                 target: home
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800 # 1 week in seconds
+                path: /admin
 
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
