--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,6 +22,13 @@ services:
     App\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
+        
+    # The token contents, including the hashed version of the user password, 
+    # are stored by default in cookies. If you prefer to store them in a database, 
+    # use the DoctrineTokenProvider class provided by the Doctrine Bridge.
+    # First, you need to register DoctrineTokenProvider as a service
+    # Then you need to create a table with the following structure in your database.
+    Symfony\Bridge\Doctrine\Security\RememberMe\DoctrineTokenProvider: ~
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
