--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.3",
         "symfony/browser-kit": "4.4.*",
         "symfony/css-selector": "4.4.*",
         "symfony/debug-pack": "*",
