--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,6 +31,7 @@ security:
 
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/practice, roles: ROLE_USER }
         - { path: ^/profile, roles: ROLE_USER }
 
     role_hierarchy:
