update project repository for codingame

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,7 +27,7 @@ security:
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 604800 # 1 week in seconds
-                path: /admin
+                path: /
 
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
